# bmai

./: BUILDING.MD  CMakeLists.txt
.github/workflows/: cmake.yml
src/: BMC_Die.cpp  BMC_Die.h  BMC_Game.cpp  BMC_Move.h  bmai.cpp
test/: BMAI3Tests.cpp  CMakeLists.txt  SkillTest.cpp  _matchers.h  _testutils.h
xcode/bmai.xcodeproj/: project.pbxproj
xcode/test/: bmai_tests[1]_include.cmake
xcode/test/bmai_tests.xcodeproj/: project.pbxproj
